# pyex_cdk_cc

./: README.rst  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  README.rst  app.py  cdk.json  requirements.txt  setup.cfg  tox.ini
{{cookiecutter.project_name}}/docs/: {{cookiecutter.namespace_name}}.{{cookiecutter.subpackage_name}}.rst
{{cookiecutter.project_name}}/zappa/: README.rst  create_activate_virtualenv.sh  requirements.txt  test_api.py
{{cookiecutter.project_name}}/zappa/hello-world/: hello_world.py  zappa_settings.json
{{cookiecutter.project_name}}/{{cookiecutter.namespace_name}}/{{cookiecutter.subpackage_name}}/: {{cookiecutter.stack_class_name}}.py  {{cookiecutter.stack_file_name}}.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}-cdk/: app.py  cdk.json
