[metadata]
name = {{cookiecutter.namespace_name}}.{{cookiecutter.subpackage_name}}
author = {{cookiecutter.author}}
author_email = {{cookiecutter.author_email}}
long_description = file: README.rst
url = https://github.com/{{cookiecutter.github_org}}/{{cookiecutter.project_name}}
python_requires = >={{cookiecutter.python_version}}
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Code Generators
    Topic :: Utilities
